--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "deploy:win": "powershell bin/autoDeploy.bat"
   },
   "devDependencies": {
+    "less": "^4.1.3",
+    "patch-package": "^7.0.0",
     "vitepress": "^1.0.0-beta.2",
-    "vue": "^3.3.4",
-    "patch-package": "^7.0.0"
+    "vue": "^3.3.4"
   },
   "dependencies": {
     "@vitepress-demo-preview/component": "^2.3.0",
