--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "less": "^4.1.3",
     "patch-package": "^7.0.0",
     "vitepress": "^1.0.0-beta.2",
+    "vitepress-plugin-autobar": "^1.0.8",
     "vue": "^3.3.4"
   },
   "dependencies": {
