--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   },
   "dependencies": {
     "@vitepress-demo-preview/component": "^2.3.0",
-    "@vitepress-demo-preview/plugin": "^1.1.11",
-    "ant-design-vue": "^3.2.20"
+    "@vitepress-demo-preview/plugin": "^1.1.12",
+    "ant-design-vue": "^3.2.20",
+    "markdown-it-custom-attrs": "^1.0.2"
   }
 }
