引入图标包

--- a/package.json
+++ b/package.json
@@ -8,14 +8,19 @@
     "deploy:win": "powershell bin/autoDeploy.bat"
   },
   "devDependencies": {
+    "@iconify/vue": "^4.1.1",
     "@types/node": "^20.3.1",
     "less": "^4.1.3",
     "patch-package": "^7.0.0",
-    "vitepress": "^1.0.0-beta.2",
+    "unplugin-auto-import": "^0.16.4",
+    "unplugin-icons": "^0.16.3",
+    "vitepress": "^1.0.0-beta.3",
     "vitepress-plugin-autobar": "^1.0.8",
     "vue": "^3.3.4"
   },
   "dependencies": {
+    "@faker-js/faker": "^8.0.2",
+    "@iconify/iconify": "^3.1.0",
     "@vitepress-demo-preview/component": "^2.3.0",
     "@vitepress-demo-preview/plugin": "^1.1.12",
     "animate.css": "^4.1.1",
@@ -24,6 +29,7 @@
     "markdown-it-custom-attrs": "^1.0.2",
     "postcss": "^8.4.24",
     "tailwindcss": "^3.3.2",
+    "unplugin-vue-components": "^0.25.1",
     "vitepress-markdown-timeline": "^1.2.1",
     "vitepress-plugin-nprogress": "^0.0.4"
   },
