--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^20.3.1",
     "less": "^4.1.3",
     "patch-package": "^7.0.0",
+    "unocss": "^0.53.3",
     "unplugin-auto-import": "^0.16.4",
     "unplugin-icons": "^0.16.3",
     "vitepress": "^1.0.0-beta.3",
@@ -20,15 +21,13 @@
   },
   "dependencies": {
     "@faker-js/faker": "^8.0.2",
-    "@iconify/iconify": "^3.1.0",
+    "@iconify/iconify": "^3.1.1",
     "@vitepress-demo-preview/component": "^2.3.0",
     "@vitepress-demo-preview/plugin": "^1.1.12",
     "animate.css": "^4.1.1",
     "ant-design-vue": "^3.2.20",
     "autoprefixer": "^10.4.14",
     "markdown-it-custom-attrs": "^1.0.2",
-    "postcss": "^8.4.24",
-    "tailwindcss": "^3.3.2",
     "unplugin-vue-components": "^0.25.1",
     "vitepress-markdown-timeline": "^1.2.1",
     "vitepress-plugin-nprogress": "^0.0.4"
