--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "deploy:win": "powershell bin/autoDeploy.bat"
   },
   "devDependencies": {
+    "@commitlint/cli": "^17.6.6",
+    "@commitlint/config-conventional": "^17.6.6",
     "@iconify/vue": "^4.1.1",
     "@types/node": "^20.3.1",
+    "husky": "^8.0.3",
     "less": "^4.1.3",
     "patch-package": "^7.0.0",
     "unocss": "^0.53.3",
