--- a/package.json
+++ b/package.json
@@ -5,13 +5,21 @@
     "docs:preview": "vitepress preview",
     "register:components": "vitepress-rc",
     "postinstall": "patch-package",
-    "deploy:win": "powershell bin/autoDeploy.bat"
+    "deploy:win": "powershell bin/autoDeploy.bat",
+    "commit": "cz"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-customizable"
+    }
   },
   "devDependencies": {
     "@commitlint/cli": "^17.6.6",
     "@commitlint/config-conventional": "^17.6.6",
     "@iconify/vue": "^4.1.1",
     "@types/node": "^20.3.1",
+    "commitizen": "^4.3.0",
+    "cz-customizable": "^7.0.0",
     "husky": "^8.0.3",
     "less": "^4.1.3",
     "patch-package": "^7.0.0",
@@ -34,6 +42,5 @@
     "unplugin-vue-components": "^0.25.1",
     "vitepress-markdown-timeline": "^1.2.1",
     "vitepress-plugin-nprogress": "^0.0.4"
-  },
-  "type": "module"
+  }
 }
