--- a/package.json
+++ b/package.json
@@ -6,23 +6,60 @@
     "register:components": "vitepress-rc",
     "postinstall": "patch-package",
     "deploy:win": "powershell bin/autoDeploy.bat",
-    "commit": "cz"
+    "commit": "cz",
+    "release": "release-it"
   },
   "config": {
     "commitizen": {
       "path": "./node_modules/cz-customizable"
+    },
+    "@release-it/conventional-changelog": {
+      "infile": "CHANGELOG.md",
+      "ignoreRecommendedBump": true,
+      "strictSemVer": true,
+      "preset": {
+        "name": "conventionalcommits",
+        "types": [
+          {
+            "type": "feat",
+            "section": "✨新功能"
+          },
+          {
+            "type": "fix",
+            "section": "🐛问题修复"
+          },
+          {
+            "type": "docs",
+            "section": "📚文档"
+          },
+          {
+            "type": "chore",
+            "section": "🔧配置文件"
+          },
+          {
+            "type": "style",
+            "section": "💄修改样式"
+          },
+          {
+            "type": "release",
+            "hidden": "true"
+          }
+        ]
+      }
     }
   },
   "devDependencies": {
     "@commitlint/cli": "^17.6.6",
     "@commitlint/config-conventional": "^17.6.6",
     "@iconify/vue": "^4.1.1",
+    "@release-it/conventional-changelog": "^5.1.1",
     "@types/node": "^20.3.1",
     "commitizen": "^4.3.0",
     "cz-customizable": "^7.0.0",
     "husky": "^8.0.3",
     "less": "^4.1.3",
     "patch-package": "^7.0.0",
+    "release-it": "^15.11.0",
     "unocss": "^0.53.3",
     "unplugin-auto-import": "^0.16.4",
     "unplugin-icons": "^0.16.3",
