--- a/package.json
+++ b/package.json
@@ -79,5 +79,6 @@
     "unplugin-vue-components": "^0.25.1",
     "vitepress-markdown-timeline": "^1.2.1",
     "vitepress-plugin-nprogress": "^0.0.4"
-  }
+  },
+  "version": "0.0.1"
 }
