--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
     "docs:build": "vitepress build",
     "docs:preview": "vitepress preview",
     "register:components": "vitepress-rc",
-    "postinstall": "patch-package",
+    "pkg:patch": "patch-package",
     "deploy:win": "powershell bin/autoDeploy.bat",
     "commit": "git add . && cz",
-    "release": "release-it"
+    "release": "release-it",
+    "version": "conventional-changelog -p custom-config -i CHANGELOG.md -s -n ./changelog-option.js && git add CHANGELOG.md",
+    "postversion": "git push --tags",
+    "changelog": "conventional-changelog -p custom-config -i CHANGELOG.md -s -n ./changelog-option.js && git add CHANGELOG.md"
   },
   "config": {
     "commitizen": {
@@ -51,16 +54,22 @@
   "devDependencies": {
     "@commitlint/cli": "^17.6.6",
     "@commitlint/config-conventional": "^17.6.6",
+    "@iconify-json/logos": "^1.1.33",
     "@iconify/vue": "^4.1.1",
     "@release-it/conventional-changelog": "^5.1.1",
-    "@types/node": "^20.3.1",
+    "@types/node": "^20.3.2",
+    "autoprefixer": "^10.4.14",
     "commitizen": "^4.3.0",
+    "conventional-changelog-cli": "^3.0.0",
+    "cssnano": "^6.0.1",
     "cz-customizable": "^7.0.0",
     "husky": "^8.0.3",
     "less": "^4.1.3",
     "patch-package": "^7.0.0",
+    "postcss": "^8.4.24",
     "release-it": "^15.11.0",
-    "unocss": "^0.53.3",
+    "tailwindcss": "^3.3.2",
+    "unocss": "^0.53.4",
     "unplugin-auto-import": "^0.16.4",
     "unplugin-icons": "^0.16.3",
     "vitepress": "^1.0.0-beta.3",
