--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
   "devDependencies": {
     "@commitlint/cli": "^17.6.6",
     "@commitlint/config-conventional": "^17.6.6",
+    "@iconify-json/carbon": "^1.1.18",
     "@iconify-json/logos": "^1.1.33",
     "@iconify/vue": "^4.1.1",
     "@release-it/conventional-changelog": "^5.1.1",
@@ -72,6 +73,7 @@
     "unocss": "^0.53.4",
     "unplugin-auto-import": "^0.16.4",
     "unplugin-icons": "^0.16.3",
+    "unplugin-vue-components": "^0.25.1",
     "vitepress": "^1.0.0-beta.4",
     "vitepress-plugin-autobar": "^1.0.8",
     "vue": "^3.3.4"
@@ -84,7 +86,6 @@
     "animate.css": "^4.1.1",
     "ant-design-vue": "^3.2.20",
     "markdown-it-custom-attrs": "^1.0.2",
-    "unplugin-vue-components": "^0.25.1",
     "vitepress-markdown-timeline": "^1.2.1",
     "vitepress-plugin-nprogress": "^0.0.4"
   },
