--- a/.github/workflows/pages-build-site.yml
+++ b/.github/workflows/pages-build-site.yml
@@ -46,7 +46,7 @@ jobs:
     #         ${{ runner.os }}-pnpm-store-
 
       - name: Install dependencies
-        run: npm install
+        run: npm install --legacy-peer-deps
 
       - name: Build docs
         run: npm run docs:build
