--- a/package.json
+++ b/package.json
@@ -8,9 +8,14 @@
     "deploy:win": "powershell bin/autoDeploy.bat",
     "commit": "git add . && cz",
     "release": "release-it",
+    "lint": "eslint --fix --ext .ts,.js,.vue src test/unit",
     "version": "conventional-changelog -p custom-config -i CHANGELOG.md -s -n ./changelog-option.js && git add CHANGELOG.md",
     "postversion": "git push --tags",
-    "changelog": "conventional-changelog -p custom-config -i CHANGELOG.md -s -n ./changelog-option.js && git add CHANGELOG.md"
+    "changelog": "conventional-changelog -p custom-config -i CHANGELOG.md -s -n ./changelog-option.js && git add CHANGELOG.md",
+    "prepare": "husky install"
+  },
+  "lint-staged": {
+    "*": "npm run lint"
   },
   "config": {
     "commitizen": {
@@ -67,7 +72,7 @@
     "husky": "^8.0.3",
     "less": "^4.1.3",
     "patch-package": "^7.0.0",
-    "postcss": "^8.4.24",
+    "postcss": "^8.4.25",
     "release-it": "^16.0.0",
     "tailwindcss": "^3.3.2",
     "unocss": "^0.53.4",
@@ -81,8 +86,8 @@
   "dependencies": {
     "@faker-js/faker": "^8.0.2",
     "@iconify/iconify": "^3.1.1",
-    "@vitepress-demo-preview/component": "^2.3.1",
-    "@vitepress-demo-preview/plugin": "^1.2.0",
+    "@vitepress-demo-preview/component": "^2.3.2",
+    "@vitepress-demo-preview/plugin": "^1.2.1",
     "animate.css": "^4.1.1",
     "ant-design-vue": "^3.2.20",
     "markdown-it-custom-attrs": "^1.0.2",
