--- a/package.json
+++ b/package.json
@@ -62,22 +62,22 @@
     "@iconify-json/carbon": "^1.1.18",
     "@iconify-json/logos": "^1.1.33",
     "@iconify/vue": "^4.1.1",
-    "@release-it/conventional-changelog": "^6.0.0",
-    "@types/node": "^20.4.0",
-    "autoprefixer": "^10.4.14",
+    "@release-it/conventional-changelog": "^7.0.0",
+    "@types/node": "^20.4.2",
+    "@unocss/preset-attributify": "^0.53.5",
+    "@unocss/preset-icons": "^0.53.5",
+    "@unocss/preset-uno": "^0.53.5",
     "commitizen": "^4.3.0",
     "conventional-changelog-cli": "^3.0.0",
     "cssnano": "^6.0.1",
     "cz-customizable": "^7.0.0",
     "husky": "^8.0.3",
     "less": "^4.1.3",
-    "patch-package": "^7.0.0",
-    "postcss": "^8.4.25",
-    "release-it": "^16.0.0",
-    "tailwindcss": "^3.3.2",
-    "unocss": "^0.53.4",
+    "patch-package": "^7.0.2",
+    "release-it": "^16.1.2",
+    "unocss": "^0.53.5",
     "unplugin-auto-import": "^0.16.6",
-    "unplugin-icons": "^0.16.3",
+    "unplugin-icons": "^0.16.5",
     "unplugin-vue-components": "^0.25.1",
     "vitepress": "^1.0.0-beta.5",
     "vitepress-plugin-autobar": "^1.0.8",
@@ -89,7 +89,7 @@
     "@vitepress-demo-preview/component": "^2.3.2",
     "@vitepress-demo-preview/plugin": "^1.2.1",
     "animate.css": "^4.1.1",
-    "ant-design-vue": "^3.2.20",
+    "ant-design-vue": "3.2.20",
     "markdown-it-custom-attrs": "^1.0.2",
     "vitepress-markdown-timeline": "^1.2.1",
     "vitepress-plugin-nprogress": "^0.0.4"
