--- a/package.json
+++ b/package.json
@@ -67,6 +67,8 @@
     "@unocss/preset-attributify": "^0.53.5",
     "@unocss/preset-icons": "^0.53.5",
     "@unocss/preset-uno": "^0.53.5",
+    "antdv-component-resolver": "^0.0.1-alpha.3",
+    "autoprefixer": "^10.4.14",
     "commitizen": "^4.3.0",
     "conventional-changelog-cli": "^3.0.0",
     "cssnano": "^6.0.1",
@@ -74,7 +76,9 @@
     "husky": "^8.0.3",
     "less": "^4.1.3",
     "patch-package": "^7.0.2",
+    "postcss": "^8.4.26",
     "release-it": "^16.1.2",
+    "tailwindcss": "^3.3.3",
     "unocss": "^0.53.5",
     "unplugin-auto-import": "^0.16.6",
     "unplugin-icons": "^0.16.5",
