--- a/package.json
+++ b/package.json
@@ -89,12 +89,16 @@
   },
   "dependencies": {
     "@faker-js/faker": "^8.0.2",
+    "@heroicons/vue": "^2.0.18",
     "@iconify/iconify": "^3.1.1",
     "@vitepress-demo-preview/component": "^2.3.2",
     "@vitepress-demo-preview/plugin": "^1.2.1",
     "animate.css": "^4.1.1",
-    "ant-design-vue": "3.2.20",
+    "ant-design-vue": "4.0.0",
+    "crypto": "^1.0.1",
+    "l-watermark": "^2.1.2",
     "markdown-it-custom-attrs": "^1.0.2",
+    "simple-icons": "^9.6.0",
     "vitepress-markdown-timeline": "^1.2.1",
     "vitepress-plugin-nprogress": "^0.0.4"
   },
