--- a/package.json
+++ b/package.json
@@ -64,9 +64,10 @@
     "@iconify/vue": "^4.1.1",
     "@release-it/conventional-changelog": "^7.0.0",
     "@types/node": "^20.4.5",
-    "@unocss/preset-attributify": "^0.54.0",
-    "@unocss/preset-icons": "^0.54.0",
-    "@unocss/preset-uno": "^0.54.0",
+    "@unocss/preset-attributify": "^0.54.1",
+    "@unocss/preset-icons": "^0.54.1",
+    "@unocss/preset-uno": "^0.54.1",
+    "@vitejs/plugin-vue-jsx": "^3.0.1",
     "antdv-component-resolver": "^1.0.1",
     "autoprefixer": "^10.4.14",
     "commitizen": "^4.3.0",
@@ -81,7 +82,7 @@
     "release-it": "^16.1.3",
     "sitemap": "^7.1.1",
     "tailwindcss": "^3.3.3",
-    "unocss": "^0.54.0",
+    "unocss": "^0.54.1",
     "unplugin-auto-import": "^0.16.6",
     "unplugin-icons": "^0.16.5",
     "unplugin-vue-components": "^0.25.1",
@@ -93,16 +94,20 @@
     "@faker-js/faker": "^8.0.2",
     "@heroicons/vue": "^2.0.18",
     "@iconify/iconify": "^3.1.1",
+    "@iminu/vitepress-plugin-auto-sidebar": "^1.0.3",
     "@vitepress-demo-preview/component": "^2.3.2",
     "@vitepress-demo-preview/plugin": "^1.2.1",
     "animate.css": "^4.1.1",
     "ant-design-vue": "^4.0.0",
+    "cp-text": "^1.0.2",
     "crypto": "^1.0.1",
     "l-watermark": "^2.1.2",
+    "lottie-web": "^5.12.2",
     "markdown-it-custom-attrs": "^1.0.2",
     "simple-icons": "^9.8.0",
     "vitepress-markdown-timeline": "^1.2.1",
-    "vitepress-plugin-nprogress": "^0.0.4"
+    "vitepress-plugin-nprogress": "^0.0.4",
+    "vitepress-plugin-pagefind": "^0.2.5"
   },
   "version": "0.0.8"
 }
