chore(custom): 升级打包

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,7 @@
   "unocss.root": "packages/client",
   "explorer.fileNesting.enabled": true,
   "explorer.fileNesting.patterns": {
-    "package.json": "tsconfig.*.json,README.md,*.js,*.json,*.config.ts,.preettierrc,.eslintrc.cjs,.eslintrc,.gitignore,.editorconfig,CHANGELOG.md",
+    "package.json": "tsconfig.*.json,README.md,*.js,*.json,*.config.ts,*.config.cjs,.preettierrc,.eslintrc.cjs,.eslintrc,.gitignore,.editorconfig,CHANGELOG.md",
     "index.html": "index.html,*.css",
     "auto-imports.d.ts":"auto-imports.d.ts,components.d.ts"
   }
