--- a/package.json
+++ b/package.json
@@ -17,9 +17,13 @@
   "lint-staged": {
     "*": "npm run lint"
   },
+  "type": "module",
   "config": {
     "commitizen": {
       "path": "./node_modules/cz-customizable"
+    },
+    "cz-customizable": {
+      "config": "./.cz-config.cjs"
     },
     "@release-it/conventional-changelog": {
       "infile": "CHANGELOG.md",
@@ -63,7 +67,7 @@
     "@iconify-json/logos": "^1.1.34",
     "@iconify/vue": "^4.1.1",
     "@release-it/conventional-changelog": "^7.0.0",
-    "@types/node": "^20.4.8",
+    "@types/node": "^20.4.9",
     "@unocss/preset-attributify": "^0.54.2",
     "@unocss/preset-icons": "^0.54.2",
     "@unocss/preset-uno": "^0.54.2",
@@ -86,8 +90,7 @@
     "unplugin-auto-import": "^0.16.6",
     "unplugin-icons": "^0.16.5",
     "unplugin-vue-components": "^0.25.1",
-    "vitepress": "^1.0.0-beta.7",
-    "vitepress-plugin-autobar": "^1.0.8",
+    "vitepress": "^1.0.0-rc.4",
     "vue": "^3.3.4"
   },
   "dependencies": {
@@ -106,6 +109,7 @@
     "markdown-it-custom-attrs": "^1.0.2",
     "simple-icons": "^9.9.0",
     "vitepress-markdown-timeline": "^1.2.1",
+    "vitepress-plugin-image-viewer": "^1.1.2",
     "vitepress-plugin-nprogress": "^0.0.4",
     "vitepress-plugin-pagefind": "^0.2.6"
   },
