--- a/package.json
+++ b/package.json
@@ -61,16 +61,16 @@
     }
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.6.7",
-    "@commitlint/config-conventional": "^17.6.7",
+    "@commitlint/cli": "^17.7.0",
+    "@commitlint/config-conventional": "^17.7.0",
     "@iconify-json/carbon": "^1.1.19",
     "@iconify-json/logos": "^1.1.34",
     "@iconify/vue": "^4.1.1",
     "@release-it/conventional-changelog": "^7.0.0",
     "@types/node": "^20.4.9",
-    "@unocss/preset-attributify": "^0.54.2",
-    "@unocss/preset-icons": "^0.54.2",
-    "@unocss/preset-uno": "^0.54.2",
+    "@unocss/preset-attributify": "^0.55.0",
+    "@unocss/preset-icons": "^0.55.0",
+    "@unocss/preset-uno": "^0.55.0",
     "@vitejs/plugin-vue-jsx": "^3.0.1",
     "antdv-component-resolver": "^1.0.1",
     "autoprefixer": "^10.4.14",
@@ -83,14 +83,18 @@
     "less": "^4.2.0",
     "patch-package": "^8.0.0",
     "postcss": "^8.4.27",
-    "release-it": "^16.1.3",
+    "release-it": "^16.1.4",
     "sitemap": "^7.1.1",
     "tailwindcss": "^3.3.3",
-    "unocss": "^0.54.2",
+    "unocss": "^0.55.0",
     "unplugin-auto-import": "^0.16.6",
     "unplugin-icons": "^0.16.5",
     "unplugin-vue-components": "^0.25.1",
+    "vite": "^4.4.9",
     "vitepress": "^1.0.0-rc.4",
+    "vitepress-plugin-life-progress": "^0.0.3",
+    "vitepress-plugin-sandpack": "^1.0.3",
+    "vitepress-sidebar": "^1.10.1",
     "vue": "^3.3.4"
   },
   "dependencies": {
@@ -108,7 +112,9 @@
     "lottie-web": "^5.12.2",
     "markdown-it-custom-attrs": "^1.0.2",
     "simple-icons": "^9.9.0",
+    "vite-plugin-markdown-preview": "^1.0.4",
     "vitepress-markdown-timeline": "^1.2.1",
+    "vitepress-plugin-back-to-top": "^1.0.1",
     "vitepress-plugin-image-viewer": "^1.1.2",
     "vitepress-plugin-nprogress": "^0.0.4",
     "vitepress-plugin-pagefind": "^0.2.6"
