--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "cz-customizable": {
       "config": "./.cz-config.cjs"
     },
+    "conventional-changelog": {
+      "config": "./changelog-option.cjs"
+    },
     "@release-it/conventional-changelog": {
       "infile": "CHANGELOG.md",
       "ignoreRecommendedBump": true,
@@ -119,5 +122,5 @@
     "vitepress-plugin-nprogress": "^0.0.4",
     "vitepress-plugin-pagefind": "^0.2.6"
   },
-  "version": "0.0.12"
+  "version": "0.0.13"
 }
