--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
       "config": "./changelog-option.cjs"
     },
     "@release-it/conventional-changelog": {
+      "config": "./changelog-option.cjs",
       "infile": "CHANGELOG.md",
       "ignoreRecommendedBump": true,
       "strictSemVer": true,
@@ -122,5 +123,5 @@
     "vitepress-plugin-nprogress": "^0.0.4",
     "vitepress-plugin-pagefind": "^0.2.6"
   },
-  "version": "0.0.13"
+  "version": "0.0.14"
 }
