chore(custom): 增加最新博文生成脚本

--- a/package.json
+++ b/package.json
@@ -105,13 +105,17 @@
     "@heroicons/vue": "^2.0.18",
     "@iconify/iconify": "^3.1.1",
     "@iminu/vitepress-plugin-auto-sidebar": "^1.0.3",
+    "@types/bluebird": "^3.5.38",
+    "@types/line-reader": "^0.0.34",
     "@vitepress-demo-preview/component": "^2.3.2",
     "@vitepress-demo-preview/plugin": "^1.2.1",
     "animate.css": "^4.1.1",
     "ant-design-vue": "^4.0.0",
+    "bluebird": "^3.7.2",
     "cp-text": "^1.0.2",
     "crypto": "^1.0.1",
     "l-watermark": "^2.1.2",
+    "line-reader": "^0.4.0",
     "lottie-web": "^5.12.2",
     "markdown-it-custom-attrs": "^1.0.2",
     "simple-icons": "^9.10.0",
