--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,10 +6,10 @@
   "unocss.root": "packages/client",
   "explorer.fileNesting.enabled": true,
   "explorer.fileNesting.patterns": {
-    "package.json": "tsconfig.*.json,README.md,*.cjs,*.js,*.json,*.config.ts,*.config.cjs,.preettierrc,.eslintrc.cjs,.eslintrc,.gitignore,.editorconfig,CHANGELOG.md",
+    "package.json": "tsconfig.*.json,*.cjs,*.js,*.json,*.config.ts,*.config.cjs,.preettierrc,.eslintrc.cjs,.eslintrc,.gitignore,.editorconfig",
     "index.html": "index.html,*.css",
     "auto-imports.d.ts":"auto-imports.d.ts,components.d.ts",
-    "index.md":"*.md"
+    "index.md":"index.md,CONTRIBUTING.md,CODE_OF_CONDUCT.md,README.md,CHANGELOG.md"
   }
   //   // 拖拽行为
   //   "markdown.editor.drop.copyIntoWorkspace": "never",
