--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
     "@iminu/vitepress-plugin-auto-sidebar": "^1.0.3",
     "@types/bluebird": "^3.5.38",
     "@types/line-reader": "^0.0.34",
+    "@vitejs/plugin-vue": "4.2.3",
     "@vitepress-demo-preview/component": "^2.3.2",
     "@vitepress-demo-preview/plugin": "^1.2.1",
     "animate.css": "^4.1.1",
