--- a/package.json
+++ b/package.json
@@ -100,6 +100,9 @@
     "vitepress-sidebar": "^1.10.1",
     "vue": "^3.3.4"
   },
+  "overrides": {
+    "@vitejs/plugin-vue": "4.2.3"
+  },
   "dependencies": {
     "@faker-js/faker": "^8.0.2",
     "@heroicons/vue": "^2.0.18",
