--- a/package.json
+++ b/package.json
@@ -73,12 +73,12 @@
     "@iconify-json/logos": "^1.1.34",
     "@iconify/vue": "^4.1.1",
     "@release-it/conventional-changelog": "^7.0.0",
-    "@types/node": "^20.5.0",
-    "@unocss/preset-attributify": "^0.55.1",
-    "@unocss/preset-icons": "^0.55.1",
-    "@unocss/preset-uno": "^0.55.1",
+    "@types/node": "^20.5.1",
+    "@unocss/preset-attributify": "^0.55.2",
+    "@unocss/preset-icons": "^0.55.2",
+    "@unocss/preset-uno": "^0.55.2",
     "@vitejs/plugin-vue-jsx": "^3.0.2",
-    "antdv-component-resolver": "^1.0.1",
+    "antdv-component-resolver": "^1.0.3",
     "autoprefixer": "^10.4.15",
     "commitizen": "^4.3.0",
     "conventional-changelog-cli": "^3.0.0",
@@ -92,7 +92,7 @@
     "release-it": "^16.1.5",
     "sitemap": "^7.1.1",
     "tailwindcss": "^3.3.3",
-    "unocss": "^0.55.1",
+    "unocss": "^0.55.2",
     "unplugin-auto-import": "^0.16.6",
     "unplugin-icons": "^0.16.5",
     "unplugin-vue-components": "^0.25.1",
@@ -116,12 +116,14 @@
     "bluebird": "^3.7.2",
     "cp-text": "^1.0.2",
     "crypto": "^1.0.1",
+    "echarts": "^5.4.3",
     "gsap": "^3.12.2",
     "l-watermark": "^2.1.2",
     "line-reader": "^0.4.0",
     "lottie-web": "^5.12.2",
     "markdown-it-custom-attrs": "^1.0.2",
-    "simple-icons": "^9.10.0",
+    "medium-zoom": "^1.0.8",
+    "simple-icons": "^9.11.0",
     "vitepress-markdown-timeline": "^1.2.1",
     "vitepress-plugin-back-to-top": "^1.0.1",
     "vitepress-plugin-image-viewer": "^1.1.2",
