--- a/package.json
+++ b/package.json
@@ -114,6 +114,7 @@
     "animate.css": "^4.1.1",
     "ant-design-vue": "^4.0.0",
     "bluebird": "^3.7.2",
+    "console-ban": "^5.0.0",
     "cp-text": "^1.0.2",
     "crypto": "^1.0.1",
     "echarts": "^5.4.3",
