refactor(custom): 优化功能

--- a/package.json
+++ b/package.json
@@ -112,7 +112,6 @@
     "@heroicons/vue": "^2.0.18",
     "@iconify/iconify": "^3.1.1",
     "@types/bluebird": "^3.5.38",
-    "@types/blueimp-md5": "^2.18.0",
     "@types/line-reader": "^0.0.34",
     "@types/markdown-it-footnote": "^3.0.0",
     "@vitepress-demo-preview/component": "^2.3.2",
@@ -120,10 +119,10 @@
     "animate.css": "^4.1.1",
     "ant-design-vue": "^4.0.1",
     "bluebird": "^3.7.2",
-    "blueimp-md5": "^2.19.0",
     "console-ban": "^5.0.0",
     "cp-text": "^1.0.2",
     "crypto": "^1.0.1",
+    "dayjs": "^1.11.9",
     "gsap": "^3.12.2",
     "l-watermark": "^2.1.2",
     "line-reader": "^0.4.0",
