--- a/.github/workflows/pages-build-site.yml
+++ b/.github/workflows/pages-build-site.yml
@@ -48,6 +48,9 @@ jobs:
       - name: Install dependencies
         run: npm install --legacy-peer-deps
 
+      - name: Increase Memory
+        run: npm run fix-memory-limit
+
       - name: Build docs
         run: npm run docs:build
 
