--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lint": "eslint --fix --ext .ts,.js,.vue src test/unit",
     "version": "conventional-changelog -p custom-config -i CHANGELOG.md -s -n ./changelog-option.cjs && git add CHANGELOG.md",
     "postversion": "git push --tags",
+    "fix-memory-limit": "cross-env LIMIT=2048 increase-memory-limit",
     "changelog": "conventional-changelog -p custom-config -i CHANGELOG.md -s -n ./changelog-option.cjs && git add CHANGELOG.md",
     "prepare": "husky install"
   },
@@ -121,9 +122,11 @@
     "bluebird": "^3.7.2",
     "console-ban": "^5.0.0",
     "cp-text": "^1.0.2",
+    "cross-env": "^7.0.3",
     "crypto": "^1.0.1",
     "dayjs": "^1.11.9",
     "gsap": "^3.12.2",
+    "increase-memory-limit": "^1.0.7",
     "l-watermark": "^2.1.2",
     "line-reader": "^0.4.0",
     "locate-path": "^7.2.0",
