chore(custom): 测试打包

--- a/package.json
+++ b/package.json
@@ -87,8 +87,10 @@
     "cssnano": "^6.0.1",
     "cz-customizable": "^7.0.0",
     "feed": "^4.2.2",
+    "flexsearch": "^0.7.31",
     "husky": "^8.0.3",
     "less": "^4.2.0",
+    "markdown-it": "^13.0.1",
     "mermaid": "^10.3.1",
     "patch-package": "^8.0.0",
     "postcss": "^8.4.28",
@@ -105,6 +107,7 @@
     "vitepress-plugin-life-progress": "^0.0.3",
     "vitepress-plugin-mermaid": "^2.0.14",
     "vitepress-plugin-sandpack": "^1.0.3",
+    "vitepress-plugin-search": "^1.0.4-alpha.20",
     "vitepress-sidebar": "^1.10.1",
     "vue": "^3.3.4"
   },
