--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "@iconify/vue": "^4.1.1",
     "@release-it/conventional-changelog": "^7.0.0",
     "@types/node": "^20.5.4",
+    "@types/three": "^0.155.1",
     "@unocss/preset-attributify": "^0.55.2",
     "@unocss/preset-icons": "^0.55.2",
     "@unocss/preset-uno": "^0.55.2",
@@ -110,7 +111,7 @@
     "vitepress-plugin-mermaid": "^2.0.14",
     "vitepress-plugin-sandpack": "^1.0.3",
     "vitepress-plugin-search": "^1.0.4-alpha.20",
-    "vitepress-sidebar": "^1.10.1",
+    "vitepress-sidebar": "^1.11.0",
     "vue": "^3.3.4"
   },
   "dependencies": {
@@ -129,6 +130,7 @@
     "cp-text": "^1.0.2",
     "cross-env": "^7.0.3",
     "crypto": "^1.0.1",
+    "dat.gui": "^0.7.9",
     "dayjs": "^1.11.9",
     "esno": "^0.17.0",
     "gsap": "^3.12.2",
@@ -144,6 +146,7 @@
     "ofetch": "^1.3.2",
     "simple-git": "^3.19.1",
     "simple-icons": "^9.11.0",
+    "three": "^0.155.0",
     "vite-plugin-vue-preview": "^1.3.0",
     "vitepress-markdown-timeline": "^1.2.1",
     "vitepress-plugin-back-to-top": "^1.0.1",
