--- a/package.json
+++ b/package.json
@@ -77,17 +77,16 @@
     "@iconify/vue": "^4.1.1",
     "@release-it/conventional-changelog": "^7.0.0",
     "@types/dat.gui": "^0.7.10",
-    "@types/gsap": "^3.0.0",
     "@types/node": "^20.5.6",
     "@types/three": "^0.155.1",
-    "@unocss/preset-attributify": "^0.55.2",
-    "@unocss/preset-icons": "^0.55.2",
-    "@unocss/preset-uno": "^0.55.2",
+    "@unocss/preset-attributify": "^0.55.3",
+    "@unocss/preset-icons": "^0.55.3",
+    "@unocss/preset-uno": "^0.55.3",
     "@vitejs/plugin-vue-jsx": "^3.0.2",
     "antdv-component-resolver": "^1.0.4",
     "autoprefixer": "^10.4.15",
     "commitizen": "^4.3.0",
-    "conventional-changelog-cli": "^3.0.0",
+    "conventional-changelog-cli": "^4.0.0",
     "cssnano": "^6.0.1",
     "cz-customizable": "^7.0.0",
     "feed": "^4.2.2",
@@ -95,21 +94,20 @@
     "husky": "^8.0.3",
     "less": "^4.2.0",
     "markdown-it": "^13.0.1",
-    "mermaid": "^10.3.1",
+    "mermaid": "^10.4.0",
     "patch-package": "^8.0.0",
     "postcss": "^8.4.28",
     "release-it": "^16.1.5",
     "sitemap": "^7.1.1",
     "tailwindcss": "^3.3.3",
-    "unocss": "^0.55.2",
+    "unocss": "^0.55.3",
     "unplugin-auto-import": "^0.16.6",
     "unplugin-icons": "^0.16.5",
     "unplugin-vue-components": "^0.25.1",
     "vite": "^4.4.9",
-    "vite-aliases": "^0.11.2",
+    "vite-aliases": "^0.11.3",
     "vite-plugin-pwa": "^0.16.4",
-    "vitepress": "^1.0.0-rc.4",
-    "vitepress-plugin-life-progress": "^0.0.3",
+    "vitepress": "^1.0.0-rc.7",
     "vitepress-plugin-mermaid": "^2.0.14",
     "vitepress-plugin-sandpack": "^1.0.3",
     "vitepress-plugin-search": "^1.0.4-alpha.20",
@@ -129,6 +127,7 @@
     "animate.css": "^4.1.1",
     "ant-design-vue": "^4.0.1",
     "bluebird": "^3.7.2",
+    "cannon-es": "^0.20.0",
     "console-ban": "^5.0.0",
     "cp-text": "^1.0.2",
     "cross-env": "^7.0.3",
@@ -147,9 +146,10 @@
     "markdown-it-footnote": "^3.0.3",
     "markdown-it-mathjax3": "^4.3.2",
     "medium-zoom": "^1.0.8",
-    "ofetch": "^1.3.2",
+    "ofetch": "^1.3.3",
+    "oimo-esm": "^1.0.10",
     "simple-git": "^3.19.1",
-    "simple-icons": "^9.11.0",
+    "simple-icons": "^9.12.0",
     "three": "^0.155.0",
     "vite-plugin-vue-preview": "^1.3.0",
     "vitepress-markdown-timeline": "^1.2.1",
@@ -157,7 +157,7 @@
     "vitepress-plugin-image-viewer": "^1.1.2",
     "vitepress-plugin-nprogress": "^0.0.4",
     "vitepress-plugin-rss": "^0.1.0",
-    "vue-resize-observer": "^2.0.15"
+    "vue-resize-observer": "^2.0.16"
   },
   "version": "0.0.22"
 }
