--- a/package.json
+++ b/package.json
@@ -102,7 +102,7 @@
     "unocss": "^0.55.3",
     "unplugin-auto-import": "^0.16.6",
     "unplugin-icons": "^0.16.6",
-    "unplugin-vue-components": "^0.25.1",
+    "unplugin-vue-components": "^0.25.2",
     "vite": "^4.4.9",
     "vite-aliases": "^0.11.3",
     "vite-plugin-pwa": "^0.16.4",
@@ -115,18 +115,19 @@
     "vue": "^3.3.4"
   },
   "dependencies": {
+    "@enra-gmbh/panolens": "^0.0.11",
     "@faker-js/faker": "^8.0.2",
     "@heroicons/vue": "^2.0.18",
     "@iconify/iconify": "^3.1.1",
     "@tweenjs/tween.js": "^21.0.0",
     "@types/bluebird": "^3.5.38",
     "@types/element-resize-detector": "^1.1.3",
-    "@types/line-reader": "^0.0.34",
+    "@types/line-reader": "^0.0.35",
     "@types/markdown-it-footnote": "^3.0.0",
     "@vitepress-demo-preview/component": "^2.3.2",
     "@vitepress-demo-preview/plugin": "^1.2.2",
     "animate.css": "^4.1.1",
-    "ant-design-vue": "^4.0.1",
+    "ant-design-vue": "3.2.20",
     "bluebird": "^3.7.2",
     "cannon-es": "^0.20.0",
     "console-ban": "^5.0.0",
@@ -150,7 +151,6 @@
     "medium-zoom": "^1.0.8",
     "ofetch": "^1.3.3",
     "oimo-esm": "^1.0.10",
-    "panolens": "^0.12.1",
     "simple-git": "^3.19.1",
     "simple-icons": "^9.12.0",
     "three": "^0.155.0",
