--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,22 +1,50 @@
 {
-    "compilerOptions": {
-        "baseUrl": ".",
-        "paths": {
-            "~/*": [
-                "src/*"
-            ],
-            "~components/*": [
-                "src/components/*"
-            ],
-            "~three/*": [
-                "src/three/*"
-            ],
-            "~workers/*": [
-                "src/workers/*"
-            ],
-            "~lotties/*": [
-                "src/lotties/*"
-            ]
-        }
-    }
+  "compilerOptions": {
+    "composite": true,
+    "module": "esnext",
+    "target": "esnext",
+    "moduleResolution": "node",
+    "esModuleInterop": true,
+    "strict": true,
+    "skipLibCheck": true,
+    "noUnusedLocals": true,
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "verbatimModuleSyntax": false,
+    "jsx": "preserve",
+    "lib": ["ESNext", "DOM"],
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src/*"],
+      "~/*": ["src/*"]
+    },
+    // "typeRoots": [
+    // ],
+    "types": []
+  },
+  "diagnostics": true,
+  "include": [
+    ".vitepress/**/*.ts",
+    ".vitepress/**/*.vue",
+    ".vitepress/**/*.json",
+    ".vitepress/**/*",
+    "typings/",
+    // "src/**/*.ts",
+    // "**/*.d.ts",
+    // "src/**/*.tsx",
+    // "src/**/*.vue",
+    // "src/autoImport/*.d.ts",
+    "env.d.ts",
+    "typings/**/*.d.ts",
+    "src/**/*",
+    "src/**/*.vue",
+    "src/**/*.json",
+    "plugins/**/*.ts",
+    "tests"
+  ],
+  "exclude": ["**/node_modules/**", "**/dist/**", "build", "public"],
+  "typedocOptions": {
+    "entryPoints": ["src/index.ts"],
+    "out": "docs"
+  }
 }
