--- a/package.json
+++ b/package.json
@@ -73,15 +73,15 @@
     "@commitlint/cli": "^17.7.1",
     "@commitlint/config-conventional": "^17.7.0",
     "@iconify-json/carbon": "^1.1.20",
-    "@iconify-json/logos": "^1.1.34",
+    "@iconify-json/logos": "^1.1.35",
     "@iconify/vue": "^4.1.1",
     "@release-it/conventional-changelog": "^7.0.0",
     "@types/dat.gui": "^0.7.10",
     "@types/node": "^20.5.7",
     "@types/three": "^0.155.1",
-    "@unocss/preset-attributify": "^0.55.3",
-    "@unocss/preset-icons": "^0.55.3",
-    "@unocss/preset-uno": "^0.55.3",
+    "@unocss/preset-attributify": "^0.55.4",
+    "@unocss/preset-icons": "^0.55.4",
+    "@unocss/preset-uno": "^0.55.4",
     "@vitejs/plugin-vue-jsx": "^3.0.2",
     "antdv-component-resolver": "^1.0.4",
     "autoprefixer": "^10.4.15",
@@ -99,7 +99,7 @@
     "postcss": "^8.4.29",
     "release-it": "^16.1.5",
     "sitemap": "^7.1.1",
-    "unocss": "^0.55.3",
+    "unocss": "^0.55.4",
     "unplugin-auto-import": "^0.16.6",
     "unplugin-icons": "^0.16.6",
     "unplugin-vue-components": "^0.25.2",
@@ -127,7 +127,7 @@
     "@vitepress-demo-preview/component": "^2.3.2",
     "@vitepress-demo-preview/plugin": "^1.2.2",
     "animate.css": "^4.1.1",
-    "ant-design-vue": "3.2.20",
+    "ant-design-vue": "4.0.2",
     "bluebird": "^3.7.2",
     "cannon-es": "^0.20.0",
     "console-ban": "^5.0.0",
@@ -153,7 +153,7 @@
     "oimo-esm": "^1.0.10",
     "simple-git": "^3.19.1",
     "simple-icons": "^9.12.0",
-    "three": "^0.155.0",
+    "three": "^0.156.0",
     "vite-plugin-monitor": "^0.2.1",
     "vite-plugin-vue-preview": "^1.3.0",
     "vitepress-markdown-timeline": "^1.2.1",
@@ -161,6 +161,7 @@
     "vitepress-plugin-image-viewer": "^1.1.2",
     "vitepress-plugin-nprogress": "^0.0.4",
     "vitepress-plugin-rss": "^0.1.1",
+    "vue-joystick-component": "^0.1.3",
     "vue-resize-observer": "^2.0.16"
   },
   "version": "0.0.22"
