refactor(custom): 优化3D性能

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,7 @@
     },
     // "typeRoots": [
     // ],
-    "types": []
+    "types": ["vite/client"]
   },
   "diagnostics": true,
   "include": [
