--- a/package.json
+++ b/package.json
@@ -75,13 +75,13 @@
     "@iconify-json/carbon": "^1.1.21",
     "@iconify-json/logos": "^1.1.35",
     "@iconify/vue": "^4.1.1",
-    "@release-it/conventional-changelog": "^7.0.0",
+    "@release-it/conventional-changelog": "^7.0.1",
     "@types/dat.gui": "^0.7.10",
     "@types/node": "^20.5.9",
     "@types/three": "^0.155.1",
-    "@unocss/preset-attributify": "^0.55.6",
-    "@unocss/preset-icons": "^0.55.6",
-    "@unocss/preset-uno": "^0.55.6",
+    "@unocss/preset-attributify": "^0.55.7",
+    "@unocss/preset-icons": "^0.55.7",
+    "@unocss/preset-uno": "^0.55.7",
     "@vitejs/plugin-vue-jsx": "^3.0.2",
     "antdv-component-resolver": "^1.0.4",
     "autoprefixer": "^10.4.15",
@@ -99,12 +99,13 @@
     "postcss": "^8.4.29",
     "release-it": "^16.1.5",
     "sitemap": "^7.1.1",
-    "unocss": "^0.55.6",
+    "unocss": "^0.55.7",
     "unplugin-auto-import": "^0.16.6",
     "unplugin-icons": "^0.17.0",
     "unplugin-vue-components": "^0.25.2",
     "vite": "^4.4.9",
     "vite-aliases": "^0.11.3",
+    "vite-plugin-html-config": "^1.0.11",
     "vite-plugin-pwa": "^0.16.4",
     "vite-plugin-style-import": "^2.0.0",
     "vitepress": "^1.0.0-rc.10",
