chore(custom): 支持流程图和数学公式

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,7 @@
     },
     // "typeRoots": [
     // ],
-    "types": ["vite/client"]
+    "types": []
   },
   "diagnostics": true,
   "include": [
