--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "husky": "^8.0.3",
     "less": "^4.2.0",
     "markdown-it": "^13.0.1",
+    "markdown-it-mathjax3": "^4.3.2",
     "mermaid": "^10.4.0",
     "patch-package": "^8.0.0",
     "postcss": "^8.4.29",
@@ -139,6 +140,7 @@
     "dayjs": "^1.11.9",
     "default-passive-events": "^2.0.0",
     "esno": "^0.17.0",
+    "front-matter": "^4.0.2",
     "gltf-pipeline": "^4.1.0",
     "gsap": "^3.12.2",
     "increase-memory-limit": "^1.0.7",
@@ -149,7 +151,6 @@
     "lottie-web": "^5.12.2",
     "markdown-it-custom-attrs": "^1.0.2",
     "markdown-it-footnote": "^3.0.3",
-    "markdown-it-mathjax3": "^4.3.2",
     "medium-zoom": "^1.0.8",
     "obj2gltf": "^3.1.6",
     "ofetch": "^1.3.3",
@@ -164,7 +165,8 @@
     "vitepress-plugin-image-viewer": "^1.1.2",
     "vitepress-plugin-nprogress": "^0.0.4",
     "vitepress-plugin-rss": "^0.1.1",
-    "vue-resize-observer": "^2.0.16"
+    "vue-resize-observer": "^2.0.16",
+    "xmind-embed-viewer": "^1.2.0"
   },
   "version": "0.0.24"
 }
