--- a/package.json
+++ b/package.json
@@ -108,6 +108,7 @@
     "vite-aliases": "^0.11.3",
     "vite-plugin-html-config": "^1.0.11",
     "vite-plugin-pwa": "^0.16.4",
+    "vite-plugin-remove-console": "^2.1.1",
     "vite-plugin-style-import": "^2.0.0",
     "vitepress": "^1.0.0-rc.10",
     "vitepress-plugin-mermaid": "^2.0.14",
@@ -156,7 +157,6 @@
     "ofetch": "^1.3.3",
     "oimo-esm": "^1.0.10",
     "simple-git": "^3.19.1",
-    "simple-icons": "^9.13.0",
     "three": "^0.156.1",
     "vite-plugin-monitor": "^0.2.1",
     "vite-plugin-vue-preview": "^1.3.0",
@@ -166,6 +166,7 @@
     "vitepress-plugin-nprogress": "^0.0.4",
     "vitepress-plugin-rss": "^0.1.1",
     "vue-resize-observer": "^2.0.16",
+    "vue3-simple-icons": "^9.10.0",
     "xmind-embed-viewer": "^1.2.0"
   },
   "version": "0.0.25"
