chore(custom): 优化打包

--- a/.github/workflows/pages-build-site.yml
+++ b/.github/workflows/pages-build-site.yml
@@ -52,6 +52,12 @@ jobs:
       - name: Increase Memory
         run: npm run fix-memory-limit
 
+      - name: Set Swap Space
+        if: matrix.os == 'ubuntu-latest'
+        uses: pierotofy/set-swap-space@master
+        with:
+          swap-size-gb: 10
+
       - name: Build docs
         run: npm run docs:build
 
