--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,10 +5,12 @@
     "module": "esnext",
     "target": "esnext",
     "moduleResolution": "node",
+    "moduleDetection": "auto",
     "esModuleInterop": true,
     "strict": true,
     "skipLibCheck": true,
     "noUnusedLocals": true,
+    "allowJs": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
     "verbatimModuleSyntax": false,
