chore(custom): 优化打包脚本

--- a/.github/workflows/pages-build-site.yml
+++ b/.github/workflows/pages-build-site.yml
@@ -58,8 +58,11 @@ jobs:
       #   with:
       #     swap-size-gb: 10
 
+      # - name: Build docs
+      #   run: npm run docs:build
+
       - name: Build docs
-        run: npm run docs:build
+        run: npm run build
 
       - uses: actions/configure-pages@v2
 
