chore(custom): 优化功能

--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "@types/dat.gui": "^0.7.10",
     "@types/element-resize-detector": "^1.1.3",
     "@types/line-reader": "^0.0.35",
+    "@types/lodash-es": "^4.17.9",
     "@types/markdown-it-footnote": "^3.0.0",
     "@types/node": "^20.6.2",
     "@types/three": "^0.156.0",
@@ -117,10 +118,12 @@
     "vite-plugin-remove-console": "^2.1.1",
     "vite-plugin-style-import": "^2.0.0",
     "vitepress": "^1.0.0-rc.14",
+    "vitepress-plugin-compression": "^0.1.4",
+    "vitepress-plugin-life-progress": "^0.0.3",
     "vitepress-plugin-mermaid": "^2.0.14",
     "vitepress-plugin-sandpack": "^1.1.1",
     "vitepress-plugin-search": "^1.0.4-alpha.20",
-    "vitepress-sidebar": "^1.14.0",
+    "vitepress-sidebar": "^1.15.0",
     "vue": "^3.3.4"
   },
   "dependencies": {
@@ -150,6 +153,7 @@
     "l-watermark": "^2.1.2",
     "line-reader": "^0.4.0",
     "locate-path": "^7.2.0",
+    "lodash-es": "^4.17.21",
     "lottie-web": "^5.12.2",
     "markdown-it-custom-attrs": "^1.0.2",
     "markdown-it-footnote": "^3.0.3",
@@ -160,12 +164,16 @@
     "simple-git": "^3.19.1",
     "three": "^0.156.1",
     "vite-plugin-monitor": "^0.2.1",
+    "vite-plugin-vitepress-auto-index": "^1.1.12",
     "vite-plugin-vue-preview": "^1.3.0",
     "vitepress-markdown-timeline": "^1.2.1",
     "vitepress-plugin-back-to-top": "^1.0.1",
+    "vitepress-plugin-detype": "^0.5.1",
     "vitepress-plugin-image-viewer": "^1.1.2",
+    "vitepress-plugin-npm-commands": "^0.5.1",
     "vitepress-plugin-nprogress": "^0.0.4",
     "vitepress-plugin-rss": "^0.1.1",
+    "vitepress-plugin-tabs": "^0.4.1",
     "vue-resize-observer": "^2.0.16",
     "vue3-simple-icons": "^9.10.0",
     "xmind-embed-viewer": "^1.2.0"
