chore(custom): 优化打包

--- a/package.json
+++ b/package.json
@@ -90,7 +90,7 @@
     "@unocss/preset-uno": "^0.56.0",
     "@vitejs/plugin-vue-jsx": "^3.0.2",
     "antdv-component-resolver": "^1.0.4",
-    "autoprefixer": "^10.4.15",
+    "autoprefixer": "^10.4.16",
     "commitizen": "^4.3.0",
     "conventional-changelog-cli": "^4.1.0",
     "cssnano": "^6.0.1",
@@ -117,13 +117,13 @@
     "vite-plugin-pwa": "^0.16.5",
     "vite-plugin-remove-console": "^2.1.1",
     "vite-plugin-style-import": "^2.0.0",
-    "vitepress": "^1.0.0-rc.14",
+    "vitepress": "^1.0.0-rc.15",
     "vitepress-plugin-compression": "^0.1.4",
     "vitepress-plugin-life-progress": "^0.0.3",
     "vitepress-plugin-mermaid": "^2.0.14",
     "vitepress-plugin-sandpack": "^1.1.1",
     "vitepress-plugin-search": "^1.0.4-alpha.20",
-    "vitepress-sidebar": "^1.15.0",
+    "vitepress-sidebar": "^1.16.0",
     "vue": "^3.3.4"
   },
   "dependencies": {
@@ -155,6 +155,7 @@
     "locate-path": "^7.2.0",
     "lodash-es": "^4.17.21",
     "lottie-web": "^5.12.2",
+    "lunisolar": "^2.2.3",
     "markdown-it-custom-attrs": "^1.0.2",
     "markdown-it-footnote": "^3.0.3",
     "medium-zoom": "^1.0.8",
@@ -172,7 +173,7 @@
     "vitepress-plugin-image-viewer": "^1.1.2",
     "vitepress-plugin-npm-commands": "^0.5.1",
     "vitepress-plugin-nprogress": "^0.0.4",
-    "vitepress-plugin-rss": "^0.1.1",
+    "vitepress-plugin-rss": "^0.1.2",
     "vitepress-plugin-tabs": "^0.4.1",
     "vue-resize-observer": "^2.0.16",
     "vue3-simple-icons": "^9.10.0",
