--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "target": "esnext",
     "moduleResolution": "node",
     "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
     "strict": true,
     "skipLibCheck": true,
     "noUnusedLocals": true,
@@ -23,8 +24,11 @@
       "public": ["./public/*"]
     },
     // "typeRoots": [
+    //   "typings"
     // ],
-    "types": [],
+    // "types": [
+    // "./node_modules/lunisolar/typings/plugins/theGods.d.ts"
+    // ],
     //提示无法覆盖文件时，需要考虑设置此项
     "outDir": "dist"
   },
