chore(custom): 优化打包

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,6 +35,7 @@
   "diagnostics": true,
   // "include": [],
   "include": [
+    "./.vitepress/**/*",
     ".vitepress/src/**/*",
     ".vitepress/components/**/*",
     ".vitepress/plugins/**/*",
