--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
     "changelog": "conventional-changelog -p custom-config -i CHANGELOG.md -s -n ./changelog-option.cjs && git add CHANGELOG.md",
     "prepare": "husky install"
   },
+  "imports": {
+    "#*": "./*",
+    "$*":"./.vitepress/*"
+  },
   "lint-staged": {
     "*": "npm run lint"
   },
@@ -76,7 +80,7 @@
     "@iconify-json/carbon": "^1.1.21",
     "@iconify-json/logos": "^1.1.37",
     "@iconify/vue": "^4.1.1",
-    "@release-it/conventional-changelog": "^7.0.1",
+    "@release-it/conventional-changelog": "^7.0.2",
     "@types/bluebird": "^3.5.39",
     "@types/dat.gui": "^0.7.10",
     "@types/element-resize-detector": "^1.1.3",
@@ -85,9 +89,9 @@
     "@types/markdown-it-footnote": "^3.0.0",
     "@types/node": "^20.6.3",
     "@types/three": "^0.156.0",
-    "@unocss/preset-attributify": "^0.56.0",
-    "@unocss/preset-icons": "^0.56.0",
-    "@unocss/preset-uno": "^0.56.0",
+    "@unocss/preset-attributify": "^0.56.1",
+    "@unocss/preset-icons": "^0.56.1",
+    "@unocss/preset-uno": "^0.56.1",
     "@vitejs/plugin-vue-jsx": "^3.0.2",
     "antdv-component-resolver": "^1.0.4",
     "autoprefixer": "^10.4.16",
@@ -107,7 +111,7 @@
     "postcss": "^8.4.30",
     "release-it": "^16.1.5",
     "sitemap": "^7.1.1",
-    "unocss": "^0.56.0",
+    "unocss": "^0.56.1",
     "unplugin-auto-import": "^0.16.6",
     "unplugin-icons": "^0.17.0",
     "unplugin-vue-components": "^0.25.2",
@@ -146,6 +150,7 @@
     "dayjs": "^1.11.10",
     "default-passive-events": "^2.0.0",
     "esno": "^0.17.0",
+    "floating-vue": "^2.0.0-beta.24",
     "front-matter": "^4.0.2",
     "gltf-pipeline": "^4.1.0",
     "gsap": "^3.12.2",
@@ -158,6 +163,7 @@
     "lunisolar": "^2.2.3",
     "markdown-it-custom-attrs": "^1.0.2",
     "markdown-it-footnote": "^3.0.3",
+    "markdown-to-txt": "^2.0.1",
     "medium-zoom": "^1.0.8",
     "obj2gltf": "^3.1.6",
     "ofetch": "^1.3.3",
