chore(custom): 增加sass支持

--- a/package.json
+++ b/package.json
@@ -87,11 +87,11 @@
     "@types/line-reader": "^0.0.35",
     "@types/lodash-es": "^4.17.9",
     "@types/markdown-it-footnote": "^3.0.0",
-    "@types/node": "^20.6.5",
+    "@types/node": "^20.7.0",
     "@types/three": "^0.156.0",
-    "@unocss/preset-attributify": "^0.56.1",
-    "@unocss/preset-icons": "^0.56.1",
-    "@unocss/preset-uno": "^0.56.1",
+    "@unocss/preset-attributify": "^0.56.2",
+    "@unocss/preset-icons": "^0.56.2",
+    "@unocss/preset-uno": "^0.56.2",
     "@vitejs/plugin-vue-jsx": "^3.0.2",
     "antdv-component-resolver": "^1.0.4",
     "autoprefixer": "^10.4.16",
@@ -110,8 +110,9 @@
     "patch-package": "^8.0.0",
     "postcss": "^8.4.30",
     "release-it": "^16.2.0",
+    "sass": "^1.68.0",
     "sitemap": "^7.1.1",
-    "unocss": "^0.56.1",
+    "unocss": "^0.56.2",
     "unplugin-auto-import": "^0.16.6",
     "unplugin-icons": "^0.17.0",
     "unplugin-vue-components": "^0.25.2",
@@ -135,6 +136,7 @@
     "@faker-js/faker": "^8.1.0",
     "@heroicons/vue": "^2.0.18",
     "@iconify/iconify": "^3.1.1",
+    "@mdit-vue/shared": "^0.12.1",
     "@tweenjs/tween.js": "^21.0.0",
     "@vitepress-demo-preview/component": "^2.3.2",
     "@vitepress-demo-preview/plugin": "^1.2.2",
