--- a/package.json
+++ b/package.json
@@ -116,6 +116,7 @@
     "unplugin-auto-import": "^0.16.6",
     "unplugin-icons": "^0.17.0",
     "unplugin-vue-components": "^0.25.2",
+    "vfonts": "^0.0.3",
     "vite": "^4.4.11",
     "vite-aliases": "^0.11.3",
     "vite-plugin-html-config": "^1.0.11",
