fix(custom): 降低Vitepress版本

--- a/package.json
+++ b/package.json
@@ -115,7 +115,7 @@
     "sitemap": "^7.1.1",
     "unocss": "^0.58.3",
     "unplugin-auto-import": "^0.17.3",
-    "unplugin-icons": "^0.18.1",
+    "unplugin-icons": "^0.18.2",
     "unplugin-vue-components": "^0.26.0",
     "vfonts": "^0.0.3",
     "vite": "^5.0.11",
@@ -125,14 +125,14 @@
     "vite-plugin-pwa": "^0.17.4",
     "vite-plugin-remove-console": "^2.2.0",
     "vite-plugin-style-import": "^2.0.0",
-    "vitepress": "^1.0.0-rc.35",
+    "vitepress": "1.0.0-rc.34",
     "vitepress-plugin-compression": "^0.1.4",
     "vitepress-plugin-life-progress": "^0.0.3",
     "vitepress-plugin-mermaid": "^2.0.16",
     "vitepress-plugin-sandpack": "^1.1.4",
     "vitepress-plugin-search": "^1.0.4-alpha.22",
     "vitepress-sidebar": "^1.18.6",
-    "vue": "^3.4.5"
+    "vue": "^3.4.6"
   },
   "dependencies": {
     "@enra-gmbh/panolens": "^0.0.11",
@@ -155,7 +155,7 @@
     "dayjs": "^1.11.10",
     "default-passive-events": "^2.0.0",
     "esno": "^4.0.0",
-    "floating-vue": "^2.0.0-beta.24",
+    "floating-vue": "^5.0.2",
     "front-matter": "^4.0.2",
     "gltf-pipeline": "^4.1.0",
     "gsap": "^3.12.4",
