--- a/.github/workflows/pages-build-site.yml
+++ b/.github/workflows/pages-build-site.yml
@@ -82,7 +82,7 @@ jobs:
         run: npm run docs:github_build
 
       - name: Setup Pages
-      - uses: actions/configure-pages@v4
+        uses: actions/configure-pages@v4
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
