feat(custom): 优化整体功能及样式

--- a/package.json
+++ b/package.json
@@ -89,6 +89,10 @@
     "@iconify-json/carbon": "^1.1.31",
     "@iconify-json/logos": "^1.1.42",
     "@iconify/vue": "^4.1.1",
+    "@nolebase/markdown-it-bi-directional-links": "^1.28.0",
+    "@nolebase/vitepress-plugin-enhanced-readabilities": "^1.28.0",
+    "@nolebase/vitepress-plugin-git-changelog": "^1.28.0",
+    "@nolebase/vitepress-plugin-highlight-targeted-heading": "^1.28.0",
     "@release-it/conventional-changelog": "^8.0.1",
     "@types/bluebird": "^3.5.42",
     "@types/dat.gui": "^0.7.13",
@@ -115,6 +119,7 @@
     "less": "^4.2.0",
     "markdown-it": "^14.1.0",
     "markdown-it-mathjax3": "^4.3.2",
+    "md5": "^2.3.0",
     "mermaid": "^10.9.0",
     "patch-package": "^8.0.0",
     "postcss": "^8.4.38",
@@ -134,6 +139,7 @@
     "vite-plugin-remove-console": "^2.2.0",
     "vite-plugin-style-import": "^2.0.0",
     "vitepress": "^1.0.2",
+    "vitepress-plugin-changelog": "^0.1.1",
     "vitepress-plugin-compression": "^0.1.4",
     "vitepress-plugin-life-progress": "^0.0.3",
     "vitepress-plugin-mermaid": "^2.0.16",
