feat(custom): 优化整体布局和样式

--- a/.hintrc
+++ b/.hintrc
@@ -1,5 +1,17 @@
 {
   "extends": [
     "development"
-  ]
+  ],
+  "hints": {
+    "compat-api/css": [
+      "default",
+      {
+        "ignore": [
+          "backdrop-filter",
+          "text-emphasis"
+        ]
+      }
+    ],
+    "css-prefix-order": "off"
+  }
 }
