--- a/package.json
+++ b/package.json
@@ -135,11 +135,12 @@
     "vitepress-plugin-changelog": "^0.1.1",
     "vitepress-plugin-compression": "^0.1.4",
     "vitepress-plugin-life-progress": "^0.0.3",
+    "vitepress-plugin-markdown-define": "^1.0.2",
     "vitepress-plugin-mermaid": "^2.0.16",
     "vitepress-plugin-sandpack": "^1.1.4",
     "vitepress-plugin-search": "^1.0.4-alpha.22",
     "vitepress-sidebar": "^1.24.1",
-    "vue": "^3.4.35"
+    "vue": "^3.4.36"
   },
   "dependencies": {
     "@enra-gmbh/panolens": "^0.0.11",
@@ -149,7 +150,7 @@
     "@lite-tree/vue": "^1.1.4",
     "@mdit-vue/shared": "^2.1.3",
     "@tweenjs/tween.js": "^25.0.0",
-    "@visactor/vchart": "^1.11.10",
+    "@visactor/vchart": "^1.11.11",
     "@visactor/vchart-theme": "^1.11.6",
     "@vitepress-demo-preview/component": "^2.3.2",
     "@vitepress-demo-preview/plugin": "^1.2.3",
@@ -157,6 +158,7 @@
     "animate.css": "^4.1.1",
     "ant-design-vue": "4.2.3",
     "bluebird": "^3.7.2",
+    "busuanzi.pure.js": "^1.0.3",
     "cannon-es": "^0.20.0",
     "console-ban": "^5.0.0",
     "cp-text": "^1.0.2",
@@ -194,8 +196,10 @@
     "vite-plugin-monitor": "^0.2.1",
     "vite-plugin-vitepress-auto-index": "^1.1.16",
     "vite-plugin-vue-preview": "^1.3.0",
+    "vitepress-markdown-it-repl": "^0.1.1",
     "vitepress-markdown-timeline": "^1.2.1",
     "vitepress-plugin-back-to-top": "^1.0.1",
+    "vitepress-plugin-codeblocks-fold": "^1.2.28",
     "vitepress-plugin-detype": "^0.6.0",
     "vitepress-plugin-image-viewer": "^1.1.5",
     "vitepress-plugin-npm-commands": "^0.6.0",
