--- a/.github/workflows/pages-build-site.yml
+++ b/.github/workflows/pages-build-site.yml
@@ -1,17 +1,28 @@
 # Simple workflow for deploying static content to GitHub Pages
 name: Deploy static content to Pages
 
+# 触发条件，push到main分支或者pull request到main分支
 on:
   push:
     branches: ["master"]
+  pull_request:
+    branches: [main]
 
   # Allows you to run this workflow manually from the Actions tab
+  # 支持手动在工作流上触发
   workflow_dispatch:
+
+# 设置时区
+env:
+  TZ: Asia/Shanghai
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
+  # 允许读取仓库内容的权限。
   contents: read
+  # 允许写入 GitHub Pages 的权限。
   pages: write
+  # 允许写入 id-token 的权限。
   id-token: write
 
 # Allow one concurrent deployment
@@ -19,13 +30,19 @@ concurrency:
   group: "pages"
   cancel-in-progress: true
 
-env:
-  # Hosted GitHub runners have 7 GB of memory available, let's use 6 GB
-  NODE_OPTIONS: --max-old-space-size=6144
+# env:
+#   # Hosted GitHub runners have 7 GB of memory available, let's use 6 GB
+#   NODE_OPTIONS: --max-old-space-size=6144
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
+
+    # node v20 运行
+    strategy:
+      matrix:
+        node-version: [20]
+
     permissions:
       pages: write
       id-token: write
@@ -35,11 +52,15 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          # 保留 Git 信息
+          fetch-depth: 0
 
-      - name: Set up Node.js
+      # 设置使用 Node.js 版本
+      - name: Set up Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v4
         with:
-          node-version: 20.x
+          node-version: ${{ matrix.node-version }}
           # cache: npm
 
       #   - uses: pnpm/action-setup@v2 // 配置使用pnpm
@@ -79,19 +100,21 @@ jobs:
       #   run: npm run docs:build
 
       - name: Build docs
-        run: npm run docs:github_build
+        run: |
+          echo ${{ github.workspace }}
+          npm run docs:github_build
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
 
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@v2
+        uses: actions/upload-pages-artifact@v3
         with:
           path: .vitepress/dist
 
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v3
+        uses: actions/deploy-pages@v4
 
         #   - name: Deploy
     #     uses: peaceiris/actions-gh-pages@v3
