feat(custom): 增加mermaid缩放和下载功能

--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "@commitlint/config-conventional": "^19.2.2",
     "@iconify-json/carbon": "^1.1.37",
     "@iconify-json/logos": "^1.1.44",
+    "@iconify/json": "^2.2.237",
     "@iconify/vue": "^4.1.2",
     "@release-it/conventional-changelog": "^8.0.1",
     "@types/bluebird": "^3.5.42",
@@ -119,12 +120,12 @@
     "release-it": "^17.6.0",
     "sass": "^1.77.8",
     "sitemap": "^8.0.0",
-    "unocss": "^0.62.1",
+    "unocss": "^0.62.2",
     "unplugin-auto-import": "^0.18.2",
     "unplugin-icons": "^0.19.2",
     "unplugin-vue-components": "^0.27.4",
     "vfonts": "^0.0.3",
-    "vite": "^5.4.0",
+    "vite": "^5.4.1",
     "vite-aliases": "^0.11.7",
     "vite-plugin-cdn-import": "^1.0.1",
     "vite-plugin-external": "^4.3.1",
@@ -143,12 +144,13 @@
     "vitepress-plugin-sandpack": "^1.1.4",
     "vitepress-plugin-search": "^1.0.4-alpha.22",
     "vitepress-sidebar": "^1.24.2",
-    "vue": "^3.4.37"
+    "vue": "^3.4.38"
   },
   "dependencies": {
     "@enra-gmbh/panolens": "^0.0.11",
     "@faker-js/faker": "^8.4.1",
     "@heroicons/vue": "^2.1.5",
+    "@iconify-json/line-md": "^1.1.39",
     "@iconify/iconify": "^3.1.1",
     "@lite-tree/vue": "^1.1.4",
     "@mdit-vue/shared": "^2.1.3",
@@ -195,6 +197,7 @@
     "oimo-esm": "^1.0.10",
     "segment": "^0.1.3",
     "simple-git": "^3.25.0",
+    "svg-pan-zoom": "^3.6.1",
     "svg2roughjs": "^3.2.0",
     "three": "^0.167.1",
     "vite-plugin-monitor": "^0.2.1",
