fix(custom): 修复引入代码示例后打包失败

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,7 @@
       "ESNext",
       "DOM"
     ],
-    "baseUrl": "./",
+    "baseUrl": ".",
     "paths": {
       "@/*": [
         "./src/*"
@@ -39,7 +39,8 @@
     "outDir": "dist"
   },
   // "types": [
-  //   "typings"
+  //   "typings",
+  //   "vite/client"
   // ],
   "diagnostics": true,
   "include": ["./**/*.ts", "./**/*.tsx", "./**/*.vue"],
