--- a/package.json
+++ b/package.json
@@ -151,6 +151,8 @@
     "@tweenjs/tween.js": "^25.0.0",
     "@visactor/vchart": "^1.12.1",
     "@visactor/vchart-theme": "^1.12.0",
+    "@vitepress-code-preview/container": "^1.0.8",
+    "@vitepress-code-preview/plugin": "^1.0.4",
     "@vuecs/timeago": "^1.1.0",
     "animate.css": "^4.1.1",
     "ant-design-vue": "4.2.3",
@@ -187,6 +189,7 @@
     "simple-git": "^3.25.0",
     "svg-zoom-drag-vue-directives": "^1.0.12",
     "svg2roughjs": "^3.2.1",
+    "vite-plugin-vue-preview": "^1.3.0",
     "vitepress-markdown-timeline": "^1.2.1",
     "vitepress-plugin-codeblocks-fold": "^1.2.28",
     "vitepress-plugin-detype": "^0.6.0",
